# constgen

./: .gitignore  README.md  meson.build
constgen/: constgen.py  dump.py  io.py  lang.py  meson.build  schema.py
include/: constgen.h
src/: constgen.cpp  generate.cpp  main.cpp  meson.build  schema.cpp
subprojects/: .gitignore
